# BMPLibrary

./: .gitignore  BMPConsoleLibrary.sln  CMakeLists.txt  README.md  build.md  main.cpp
BMPConsoleLibrary/: BMPConsoleLibrary.vcxproj  BMPConsoleLibrary.vcxproj.filters  BMPImage.cpp  BMPImage.hpp  main.cpp
bmp/: bmp_file.cpp  bmp_file.hpp
